--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -36,8 +36,145 @@
     </form>
   </div>
 
-  <!-- jQuery required for JSONPowerDB -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
 </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Shipment Management</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, #a7bfe8, #619afc, #85d8d3, #7eaff8);
+            background-size: 400% 400%;
+            animation: gradientAnimation 15s ease infinite;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1rem;
+        }
+
+        @keyframes gradientAnimation {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        input:disabled {
+            @apply bg-gray-100 text-gray-500 cursor-not-allowed border-gray-200;
+        }
+
+        button:disabled {
+            @apply opacity-50 cursor-not-allowed shadow-none;
+        }
+    </style>
+</head>
+<body class="font-inter">
+    <div class="container mx-auto">
+        <div class="bg-white px-8 py-6 md:px-10 md:py-8 rounded-2xl shadow-xl w-full max-w-lg mx-auto transform transition-all duration-300 hover:scale-[1.01] hover:shadow-2xl max-h-screen overflow-y-auto">
+            <h2 class="text-3xl font-bold text-center text-gray-800 mb-8 relative pb-4">
+                Shipment Management
+                <span class="absolute bottom-0 left-1/2 -translate-x-1/2 w-24 h-1 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full"></span>
+            </h2>
+
+            <form id="shipmentForm" class="space-y-6">
+                <div>
+                    <label for="shipmentNo" class="block text-gray-700 text-sm font-medium mb-2">
+                        <svg class="inline-block w-4 h-4 mr-1 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10m-8-4l8 4m0-4.5h.01M12 21.5h.01M12 17.5h.01M12 13.5h.01M12 9.5h.01"></path></svg>
+                        Shipment No.
+                    </label>
+                    <input type="text" id="shipmentNo" onblur="findShipment(this)" placeholder="Enter Shipment Number"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out placeholder-gray-400" />
+                </div>
+
+                <div>
+                    <label for="description" class="block text-gray-700 text-sm font-medium mb-2">
+                        <svg class="inline-block w-4 h-4 mr-1 text-purple-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+                        Description
+                    </label>
+                    <input type="text" id="description" disabled placeholder="Shipment contents details"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out placeholder-gray-400" />
+                </div>
+
+                <div>
+                    <label for="source" class="block text-gray-700 text-sm font-medium mb-2">
+                        <svg class="inline-block w-4 h-4 mr-1 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                        Source
+                    </label>
+                    <input type="text" id="source" disabled placeholder="Origin city/address"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out placeholder-gray-400" />
+                </div>
+
+                <div>
+                    <label for="destination" class="block text-gray-700 text-sm font-medium mb-2">
+                        <svg class="inline-block w-4 h-4 mr-1 text-red-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                        Destination
+                    </label>
+                    <input type="text" id="destination" disabled placeholder="Destination city/address"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out placeholder-gray-400" />
+                </div>
+
+                <div class="flex flex-col sm:flex-row gap-4">
+                    <div class="flex-1">
+                        <label for="shippingDate" class="block text-gray-700 text-sm font-medium mb-2">
+                            <svg class="inline-block w-4 h-4 mr-1 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
+                            Shipping Date
+                        </label>
+                        <input type="date" id="shippingDate" disabled
+                            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out" />
+                    </div>
+
+                    <div class="flex-1">
+                        <label for="expectedDate" class="block text-gray-700 text-sm font-medium mb-2">
+                            <svg class="inline-block w-4 h-4 mr-1 text-teal-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
+                            Expected Delivery Date
+                        </label>
+                        <input type="date" id="expectedDate" disabled
+                            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out" />
+                    </div>
+                </div>
+
+                <div class="button-group flex flex-col sm:flex-row gap-4 pt-4">
+                    <button type="button" id="saveBtn" onclick="saveData()" disabled
+                        class="flex-1 px-6 py-3 rounded-xl font-semibold shadow-md transition-all duration-300 ease-in-out
+                        bg-gradient-to-r from-green-500 to-emerald-600 text-white hover:from-green-600 hover:to-emerald-700 hover:shadow-lg hover:-translate-y-0.5">
+                        <svg class="inline-block w-5 h-5 mr-2 -mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7H5a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2V8m5-1a2 2 0 01-2 2h-4a2 2 0 01-2-2V4a2 2 0 012-2h4a2 2 0 012 2v3z"></path></svg>
+                        Save
+                    </button>
+                    <button type="button" id="updateBtn" onclick="updateData()" disabled
+                        class="flex-1 px-6 py-3 rounded-xl font-semibold shadow-md transition-all duration-300 ease-in-out
+                        bg-gradient-to-r from-blue-500 to-indigo-600 text-white hover:from-blue-600 hover:to-indigo-700 hover:shadow-lg hover:-translate-y-0.5">
+                        <svg class="inline-block w-5 h-5 mr-2 -mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
+                        Update
+                    </button>
+                    <button type="button" id="resetBtn" onclick="disableAll()"
+                        class="flex-1 px-6 py-3 rounded-xl font-semibold shadow-md transition-all duration-300 ease-in-out
+                        bg-gradient-to-r from-gray-400 to-gray-500 text-white hover:from-gray-500 hover:to-gray-600 hover:shadow-lg hover:-translate-y-0.5">
+                        <svg class="inline-block w-5 h-5 mr-2 -mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004 12c0 2.21.816 4.218 2.155 5.766M17 19v-5h-.582m0 0a8.001 8.001 0 00-15.356-2A8.001 8.001 0 0020 12c0-2.21-.816-4.218-2.155-5.766"></path></svg>
+                        Reset
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
+
